--- a/_sass/jekyll-theme-architect.scss
+++ b/_sass/jekyll-theme-architect.scss
@@ -165,17 +165,19 @@ hr {
 
 table {
   width: 100%;
-  border: 1px solid #ebebeb;
+  border: 2px solid #aaaaaa;
 }
 
+/*
 th {
   font-weight: 500;
 }
+*/
 
 td {
   font-weight: 300;
   text-align: center;
-  border: 1px solid #ebebeb;
+  border: 2px solid #aaaaaa;
 }
 
 form {
